feat: made naming consistent
